@@ -10,7 +10,7 @@ import java.lang.reflect.Method;
 import java.net.HttpURLConnection;
 import java.net.SocketTimeoutException;
 import java.net.URI;
-import java.net.URL;
+import java.net.URISyntaxException;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
@@ -174,6 +174,11 @@ public final class DohResolver implements Resolver {
     USE_HTTP_CLIENT = initSuccess;
   }
 
+  // package-visible for testing
+  long getNanoTime() {
+    return System.nanoTime();
+  }
+
   /**
    * Creates a new DoH resolver that performs lookups with HTTP GET and the default timeout (5s).
    *
@@ -315,7 +320,7 @@ public final class DohResolver implements Resolver {
   private CompletionStage<Message> sendAsync8(final Message query, Executor executor) {
     byte[] queryBytes = prepareQuery(query).toWire();
     String url = getUrl(queryBytes);
-    long startTime = System.nanoTime();
+    long startTime = getNanoTime();
     return maxConcurrentRequests
         .acquire(timeout)
         .handleAsync(
@@ -339,7 +344,7 @@ public final class DohResolver implements Resolver {
                   return CompletableFuture.completedFuture(response);
                 } catch (SocketTimeoutException e) {
                   return this.<Message>timeoutFailedFuture(query, e);
-                } catch (IOException e) {
+                } catch (IOException | URISyntaxException e) {
                   return this.<Message>failedFuture(e);
                 } finally {
                   permit.release();
@@ -357,13 +362,13 @@ public final class DohResolver implements Resolver {
   }
 
   private SendAndGetMessageBytesResponse sendAndGetMessageBytes(
-      String url, byte[] queryBytes, long startTime) throws IOException {
-    HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+      String url, byte[] queryBytes, long startTime) throws IOException, URISyntaxException {
+    HttpURLConnection conn = (HttpURLConnection) new URI(url).toURL().openConnection();
     if (conn instanceof HttpsURLConnection) {
       ((HttpsURLConnection) conn).setSSLSocketFactory(sslSocketFactory);
     }
 
-    Duration remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+    Duration remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
     conn.setConnectTimeout((int) remainingTimeout.toMillis());
     conn.setReadTimeout((int) remainingTimeout.toMillis());
     conn.setRequestMethod(usePost ? "POST" : "GET");
@@ -389,7 +394,7 @@ public final class DohResolver implements Resolver {
         int offset = 0;
         while ((r = is.read(responseBytes, offset, responseBytes.length - offset)) > 0) {
           offset += r;
-          remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+          remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
           if (remainingTimeout.isNegative()) {
             throw new SocketTimeoutException();
           }
@@ -403,7 +408,7 @@ public final class DohResolver implements Resolver {
           byte[] buffer = new byte[4096];
           int r;
           while ((r = is.read(buffer, 0, buffer.length)) > 0) {
-            remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+            remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
             if (remainingTimeout.isNegative()) {
               throw new SocketTimeoutException();
             }
@@ -432,7 +437,7 @@ public final class DohResolver implements Resolver {
   }
 
   private CompletionStage<Message> sendAsync11(final Message query, Executor executor) {
-    long startTime = System.nanoTime();
+    long startTime = getNanoTime();
     byte[] queryBytes = prepareQuery(query).toWire();
     String url = getUrl(queryBytes);
 
@@ -454,7 +459,7 @@ public final class DohResolver implements Resolver {
     // check if this request needs to be done synchronously because of HttpClient's stupidity to
     // not use the connection pool for HTTP/2 until one connection is successfully established,
     // which could lead to hundreds of connections (and threads with the default executor)
-    Duration remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+    Duration remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
     return initialRequestLock
         .acquire(remainingTimeout)
         .handle(
@@ -476,14 +481,13 @@ public final class DohResolver implements Resolver {
       Object requestBuilder,
       Permit initialRequestPermit) {
     long lastRequestTime = lastRequest.get();
-    boolean isInitialRequest =
-        (lastRequestTime < System.nanoTime() - idleConnectionTimeout.toNanos());
+    boolean isInitialRequest = idleConnectionTimeout.toNanos() > getNanoTime() - lastRequestTime;
     if (!isInitialRequest) {
       initialRequestPermit.release();
     }
 
     // check if we already exceeded the query timeout while checking the initial connection
-    Duration remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+    Duration remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
     if (remainingTimeout.isNegative()) {
       if (isInitialRequest) {
         initialRequestPermit.release();
@@ -525,7 +529,7 @@ public final class DohResolver implements Resolver {
       boolean isInitialRequest,
       Permit maxConcurrentRequestPermit) {
     // check if the stream lock acquisition took too long
-    Duration remainingTimeout = timeout.minus(System.nanoTime() - startTime, ChronoUnit.NANOS);
+    Duration remainingTimeout = timeout.minus(getNanoTime() - startTime, ChronoUnit.NANOS);
     if (remainingTimeout.isNegative()) {
       if (isInitialRequest) {
         initialRequestPermit.release();
